dataset1235/2025-2/2947369575/users/1936540434/executions/1003782500_1462915504.log
== SUBMISSION (2025-08-27 22:58:33)
-- CODE: 
from math import *

l = float(input("Insira lado(l)" ))
# faça seu código aqui!
ap = (l/(2*tan(pi/5)))
area = (5/2*l*ap)

print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira lado(l)139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira lado(l)61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira lado(l)208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira lado(l)110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira lado(l)27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira lado(l)172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:58:30)
-- CODE: 
from math import *

l = float(input("Insira lado(l)" ))
# faça seu código aqui!
ap = (l/(2*tan(pi/5)))
area = (5/2*l*ap)

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira lado(l)139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira lado(l)61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira lado(l)208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira lado(l)110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira lado(l)27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira lado(l)172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:57:30)
-- CODE: 
from math import *

l = float(input("Insira lado(l)" ))
# faça seu código aqui!
ap = (l/(2*tan(pi/3)))
area = (5/2*l*ap)

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira lado(l)58.46
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira lado(l)25.98
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira lado(l)87.32
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira lado(l)46.19
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira lado(l)11.55
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira lado(l)72.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:57:23)
-- CODE: 
from math import *

l = float(input("Insira lado(l)" ))
# faça seu código aqui!
ap = (l/(2*tan(pi/3)))
area = (5/2*l*ap)

print (round(area,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 8
    print (round(area,2)
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:58:10)
-- CODE: 
from math import *

l = float(input("Insira lado(l)" ))
# faça seu código aqui!
ap = (l/(2*tan(pi/3)))
area = (5/2*l*ap)

print (round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira lado(l)58.46
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira lado(l)25.98
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira lado(l)87.32
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira lado(l)46.19
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira lado(l)11.55
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira lado(l)72.17
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
